--- a/cassandra-source-cosmosdb.properties
+++ b/cassandra-source-cosmosdb.properties
@@ -8,3 +8,6 @@ connect.cassandra.contact.points=13.92.96.125
 connect.cassandra.port=9042
 connect.cassandra.username=cassandratest
 connect.cassandra.password=password
+connect.cassandra.ssl.enabled=true
+connect.cassandra.trust.store.path=/usr/jre1.8.0_151/lib/security/cacerts
+connect.cassandra.trust.store.password=changeit
